# FastAPI-ddd-clean

./: .dockerignore  .env  .env.docker  .gitignore  .pre-commit-config.yml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
api/: application.py  initialization.py
api/domain/example/entities/: example.py
api/domain/example/exceptions/: example.py
api/domain/example/repositories/: example.py
api/domain/example/services/: example.py
api/general/: enums.py  utils.py
api/infrastructure/: config.py
api/infrastructure/clients/: base.py
api/infrastructure/database/: postgres.py
api/infrastructure/dependencies/: di.py
api/infrastructure/interfaces/: client.py  router.py
api/presentation/example/models/: example.py
api/presentation/example/router/: example.py
pgdata/18/docker/: postmaster.pid
pgdata/18/docker/base/16384/: 2619  pg_internal.init
pgdata/18/docker/base/5/: 2619
pgdata/18/docker/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
